@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.2 2004/04/13 14:25:35 xtraeme Exp $
+# $NetBSD: Makefile,v 1.3 2004/06/27 20:21:52 xtraeme Exp $
 #
 
-DISTNAME=	uptimec-0.2p1
+DISTNAME=	uptimec-0.2p3
 CATEGORIES=	misc
 MASTER_SITES=	http://www.mreriksson.net/downloads/
 
-MAINTAINER=	tech-pkg@NetBSD.org
+MAINTAINER=	ola@mrEriksson.net
 HOMEPAGE=	http://www.mreriksson.net/uptimes/
 COMMENT=	Uptime Project client
 
