@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2004/04/13 14:06:10 xtraeme Exp $
+$NetBSD: distinfo,v 1.2 2004/06/27 20:21:52 xtraeme Exp $
 
-SHA1 (uptimec-0.2p1.tar.gz) = 7cc60aaf6a5d846699948d3072fec061933e2e42
-Size (uptimec-0.2p1.tar.gz) = 73363 bytes
+SHA1 (uptimec-0.2p3.tar.gz) = b14a7ba166d558b75ea3d5700dc73ba18b199e14
+Size (uptimec-0.2p3.tar.gz) = 82082 bytes
